@startuml mode_feature_er

entity "games" {
  + id : integer <<PK>>
  --
  status : string
  mode : varchar(10)
  previous_mode : varchar(10)
  preserved_state : text
  winner : string
  ended_at : datetime
  created_at : datetime
  updated_at : datetime
}

entity "board_histories" {
  + id : integer <<PK>>
  --
  # game_id : integer <<FK>>
  sfen : string
  move_number : integer
  branch : string
  is_edited : boolean
  edited_at : timestamp
  created_at : datetime
  updated_at : datetime
}

entity "comments" {
  + id : integer <<PK>>
  --
  # board_history_id : integer <<FK>>
  content : text
  created_at : datetime
  updated_at : datetime
}

games ||--o{ board_histories
board_histories ||--o{ comments

note bottom of games
  mode in ('play', 'edit', 'study')
  preserved_state: 前モードの状態をJSON形式で保存
end note

note bottom of board_histories
  複数の分岐をサポート
  編集履歴を保持
end note

note bottom of comments
  指し手ごとのコメントを保持
end note

@enduml